// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visualize Dropdown Component:  > Should return the right HTML 1`] = `
<div>
  <div
    class="response-format-datatype-duree"
  >
    <div
      class="ctrl-select"
    >
      <label
        for="select-DURATION.format"
      >
        Format
        <span
          class="ctrl-required"
        >
          *
        </span>
      </label>
      <div>
        <select
          id="select-DURATION.format"
          name="DURATION.format"
          placeholder="Format"
        >
          <option
            value=""
          >
            Duration format
          </option>
          <option
            value="PTnHnM"
          >
            hours/minutes
          </option>
          <option
            value="PnYnM"
          >
            years/months
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="response-format-datatype-duree-minimum"
      >
        <div
          class="response-format-datatype-duree-label-minimum"
        >
          Minimum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-minimum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mihours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mihours"
                  name="DURATION.mihours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.miminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.miminutes"
                  name="DURATION.miminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="response-format-datatype-duree-maximum"
      >
        <div
          class="response-format-datatype-duree-label-maximum"
        >
          Maximum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-maximum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mahours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mahours"
                  name="DURATION.mahours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.maminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.maminutes"
                  name="DURATION.maminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visualize Dropdown Component:  > Should return the right HTML according to format "PTnHnM"  1`] = `
<div>
  <div
    class="response-format-datatype-duree"
  >
    <div
      class="ctrl-select"
    >
      <label
        for="select-DURATION.format"
      >
        Format
        <span
          class="ctrl-required"
        >
          *
        </span>
      </label>
      <div>
        <select
          id="select-DURATION.format"
          name="DURATION.format"
          placeholder="Format"
        >
          <option
            value=""
          >
            Duration format
          </option>
          <option
            value="PTnHnM"
          >
            hours/minutes
          </option>
          <option
            value="PnYnM"
          >
            years/months
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="response-format-datatype-duree-minimum"
      >
        <div
          class="response-format-datatype-duree-label-minimum"
        >
          Minimum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-minimum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mihours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mihours"
                  name="DURATION.mihours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.miminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.miminutes"
                  name="DURATION.miminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="response-format-datatype-duree-maximum"
      >
        <div
          class="response-format-datatype-duree-label-maximum"
        >
          Maximum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-maximum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mahours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mahours"
                  name="DURATION.mahours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.maminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.maminutes"
                  name="DURATION.maminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visualize Dropdown Component:  > Should return the right HTML according to format "PnYnM"  1`] = `
<div>
  <div
    class="response-format-datatype-duree"
  >
    <div
      class="ctrl-select"
    >
      <label
        for="select-DURATION.format"
      >
        Format
        <span
          class="ctrl-required"
        >
          *
        </span>
      </label>
      <div>
        <select
          id="select-DURATION.format"
          name="DURATION.format"
          placeholder="Format"
        >
          <option
            value=""
          >
            Duration format
          </option>
          <option
            value="PTnHnM"
          >
            hours/minutes
          </option>
          <option
            value="PnYnM"
          >
            years/months
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="response-format-datatype-duree-minimum"
      >
        <div
          class="response-format-datatype-duree-label-minimum"
        >
          Minimum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-minimum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.miyears"
              >
                years
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.miyears"
                  name="DURATION.miyears"
                  placeholder="years"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mimonths"
              >
                months
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mimonths"
                  name="DURATION.mimonths"
                  placeholder="months"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="response-format-datatype-duree-maximum"
      >
        <div
          class="response-format-datatype-duree-label-maximum"
        >
          Maximum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-maximum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mayears"
              >
                years
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mayears"
                  name="DURATION.mayears"
                  placeholder="years"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-DURATION.mamonths"
              >
                months
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-DURATION.mamonths"
                  name="DURATION.mamonths"
                  placeholder="months"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
